// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SegmentSticker should render 1`] = `
<Sticker
  circle={false}
  className="segment-sticker-root"
  display="light"
  symbol="individual-static-segment"
/>
`;

exports[`SegmentSticker should render with a disabled segment icon 1`] = `
<Sticker
  circle={false}
  className="segment-sticker-root"
  display="warning"
  symbol="warning"
/>
`;

exports[`SegmentSticker should render with a dynamic segment icon 1`] = `
<Sticker
  circle={false}
  className="segment-sticker-root"
  display="light"
  symbol="individual-dynamic-segment"
/>
`;
